test/tests/errors/error-jumpout-id-forgotten.sm
// true
// false
/**/
/**/

program {
    var x = jumpout j in j(1);
    var y = jumpout k in j(1);
}